data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3769.wast
;; 8. **Test Description**: Introduce a `call` function that returns multiple values, followed by a `br_table` instruction that directs to variable target functions based on dynamic and edge-bound indices. Validation would focus on result handling and index ramifications.    - **Reasoning**: This focuses on ensuring results from `call` are correctly handled in subsequent dynamic `br_table` targets.

(assert_invalid
  (module
    (func $multi_return (result i32 i32)
      (i32.const 1)
      (i32.const 2)
    )
    (func $target_0 (param i32 i32) (nop))
    (func $target_1 (param i32 i32) (nop))
    (func $call_and_br_table
      (call $multi_return)
      (br_table 0 1 1 (i32.const 1))
    )
  )
  "type mismatch in br_table"
)